# Build options
option('asm', type: 'feature', value: 'auto', description: 'Enable assembly optimizations')
option('debugging', type: 'boolean', value: false, description: 'Enable debugging support')
option('inline', type: 'boolean', value: true, description: 'Enable inline functions')
option('rng', type: 'boolean', value: true, description: 'Enable compiling and using RNG')
option('harden', type: 'boolean', value: true, description: 'Enable Hardened build, Enables Timing Resistance and Blinding')
option('low_resource', type: 'boolean', value: false, description: 'Reduce size by using small versions of features')
option('filesystem', type: 'feature', value: 'auto', description: 'Enable Filesystem support')
option('error_strings', type: 'boolean', value: true, description: 'Enable error strings table')
option('server', type: 'boolean', value: true, description: 'Enable server support')
option('client', type: 'boolean', value: true, description: 'Enable client support')
option('sys_ca_certs', type: 'feature', value: 'enabled', description: 'Enable ability to load CA certs from OS')
option('no_malloc', type: 'boolean', value: false, description: 'Disable malloc/realloc/free usage')

option('crypt_tests', type: 'boolean', value: false, description: 'Enable Crypt Bench/Test')
option('testsuite', type: 'boolean', value: false, description: 'Enable test suite')
option('examples', type: 'boolean', value: false, description: 'Enable example applications')

# Threading options
option('single_threaded', type: 'boolean', value: false, description: 'Build as single-threaded')
option('async_crypt', type: 'feature', value: 'auto', description: 'Enable async cryptography')
option('async_threads', type: 'feature', value: 'auto', description: 'Enable async threading')

# Hash function options
option('sha', type: 'feature', value: 'enabled', description: 'Enable SHA-1')
option('sha224', type: 'feature', value: 'disabled', description: 'Enable SHA-224')
option('sha384', type: 'feature', value: 'disabled', description: 'Enable SHA-384')
option('sha512', type: 'feature', value: 'disabled', description: 'Enable SHA-512')
option('sha3', type: 'feature', value: 'disabled', description: 'Enable SHA-3')
option('shake128', type: 'feature', value: 'disabled', description: 'Enable SHAKE128')
option('shake256', type: 'feature', value: 'disabled', description: 'Enable SHAKE256')
option('md4', type: 'feature', value: 'auto', description: 'Enable MD4')
option('md5', type: 'feature', value: 'auto', description: 'Enable MD5')

# TLS extension options
option('alpn', type: 'feature', value: 'auto', description: 'Enable ALPN support')
option('sni', type: 'feature', value: 'auto', description: 'Enable SNI support')
option('tlx', type: 'feature', value: 'auto', description: 'Enable TLS extensions')
option('session_ticket', type: 'feature', value: 'auto', description: 'Enable session tickets')
option('ticket_nonce_malloc', type: 'feature', value: 'disabled', description: 'Enable ticket nonce malloc')
option('extended_master', type: 'feature', value: 'disabled', description: 'Enable extended master secret')
option('enc_then_mac', type: 'feature', value: 'disabled', description: 'Enable encrypt-then-MAC')
option('supported_curves', type: 'feature', value: 'disabled', description: 'Enable supported curves extension')

# Public key cryptography options
option('rsa', type: 'feature', value: 'enabled', description: 'Enable RSA')
option('oaep', type: 'feature', value: 'enabled', description: 'Enable RSA-OAEP')
option('rsa_pss', type: 'feature', value: 'auto', description: 'Enable RSA-PSS')
option('dh', type: 'combo', choices: ['disabled', 'enabled', 'const'], value: 'enabled', description: 'Enable Diffie-Hellman')
option('dh_default_params', type: 'feature', value: 'enabled', description: 'Enable DH default parameters')
option('dsa', type: 'feature', value: 'enabled', description: 'Enable DSA')
option('ecc', type: 'combo', choices: ['disabled', 'enabled', 'nonblock'], value: 'enabled', description: 'Enable ECC')
option('eccshamir', type: 'feature', value: 'enabled', description: 'Enable ECC Shamir optimization')
option('ecccustcurves', type: 'combo', choices: ['disabled', 'enabled', 'all'], value: 'disabled', description: 'Enable custom ECC curves')
option('curve25519', type: 'combo', choices: ['disabled', 'enabled', 'small', 'no128bit'], value: 'disabled', description: 'Enable Curve25519')
option('ed25519', type: 'combo', choices: ['disabled', 'enabled', 'small'], value: 'disabled', description: 'Enable Ed25519')
option('curve448', type: 'combo', choices: ['disabled', 'enabled', 'small', 'no128bit'], value: 'disabled', description: 'Enable Curve448')
option('ed448', type: 'combo', choices: ['disabled', 'enabled', 'small'], value: 'disabled', description: 'Enable Ed448')

# Symmetric cipher options
option('aes', type: 'feature', value: 'enabled', description: 'Enable AES')
option('aes_small_tables', type: 'feature', value: 'auto', description: 'Enable AES small tables')
option('aes_no_unroll', type: 'feature', value: 'auto', description: 'Disable AES loop unrolling')
option('aes128', type: 'feature', value: 'enabled', description: 'Enable AES 128-bit')
option('aes192', type: 'feature', value: 'enabled', description: 'Enable AES 192-bit')
option('aes256', type: 'feature', value: 'enabled', description: 'Enable AES 256-bit')
option('aescbc', type: 'feature', value: 'enabled', description: 'Enable AES-CBC')
option('aesgcm', type: 'combo', choices: ['enabled', 'disabled', 'word32', 'small', 'table', '4bit'], value: 'disabled', description: 'Enable AES-GCM')
option('aesccm', type: 'feature', value: 'auto', description: 'Enable AES-CCM')
option('aesctr', type: 'feature', value: 'auto', description: 'Enable AES-CTR')
option('aesofb', type: 'feature', value: 'auto', description: 'Enable AES-OFB')
option('aescfb', type: 'feature', value: 'auto', description: 'Enable AES-CFB')
option('aessiv', type: 'feature', value: 'auto', description: 'Enable AES-SIV')
option('aeskeywrap', type: 'feature', value: 'disabled', description: 'Enable AES key wrap')
option('des3', type: 'feature', value: 'enabled', description: 'Enable 3DES')
option('des3_tls_suites', type: 'feature', value: 'enabled', description: 'Enable 3DES TLS cipher suites')
option('arc4', type: 'feature', value: 'enabled', description: 'Enable ARC4')
option('aria', type: 'feature', value: 'disabled', description: 'Enable ARIA')
option('chacha', type: 'combo', choices: ['disabled', 'enabled', 'noasm'], value: 'disabled', description: 'Enable ChaCha20')
option('poly1305', type: 'feature', value: 'disabled', description: 'Enable Poly1305')
option('cmac', type: 'feature', value: 'disabled', description: 'Enable CMAC')
option('hkdf', type: 'feature', value: 'auto', description: 'Enable HKDF (HMAC-KDF) support')

# TLS/SSL protocol features
option('tls13', type: 'feature', value: 'disabled', description: 'Enable TLS 1.3')
option('tlsv12', type: 'feature', value: 'enabled', description: 'Enable TLS 1.2')
option('old_tls', type: 'feature', value: 'auto', description: 'Enable old TLS versions (1.0, 1.1)')
option('dtls', type: 'feature', value: 'disabled', description: 'Enable DTLS')
option('dtls13', type: 'feature', value: 'disabled', description: 'Enable DTLS 1.3')
option('dtls_cid', type: 'feature', value: 'disabled', description: 'Enable DTLS Connection ID')
option('srtp', type: 'feature', value: 'disabled', description: 'Enable SRTP')
option('postauth', type: 'feature', value: 'disabled', description: 'Enable post-handshake authentication')
option('hrr_cookie', type: 'feature', value: 'auto', description: 'Enable HRR cookie')

# Callback and hook options
option('ex_data', type: 'feature', value: 'auto', description: 'Enable extra data support')
option('cryptocb', type: 'boolean', value: false, description: 'Enable crypto callbacks')
option('cryptocb_no_sw_test', type: 'boolean', value: false, description: 'Disable crypto callback software test')
option('pkcallbacks', type: 'boolean', value: false, description: 'Enable public key callbacks')

# Certificate and PKI features
option('crl', type: 'combo', choices: ['disabled', 'enabled', 'io'], value: 'disabled', description: 'Enable CRL support')
option('ocsp', type: 'feature', value: 'auto', description: 'Enable OCSP')
option('ocspstapling', type: 'feature', value: 'auto', description: 'Enable OCSP stapling')
option('ocspstapling_v2', type: 'feature', value: 'auto', description: 'Enable OCSP stapling v2')
option('alt_cert_chains', type: 'feature', value: 'auto', description: 'Enable alternative certificate chains')
option('ip_alt_name', type: 'feature', value: 'auto', description: 'Enable IP alternative names')
option('certgen', type: 'feature', value: 'auto', description: 'Enable certificate generation')
option('certreq', type: 'feature', value: 'auto', description: 'Enable certificate requests')
option('certext', type: 'feature', value: 'auto', description: 'Enable certificate extensions')
option('certgencache', type: 'boolean', value: false, description: 'Enable certificate generation cache')
option('keygen', type: 'boolean', value: false, description: 'Enable key generation')
option('enckeys', type: 'boolean', value: false, description: 'Enable encrypted key support')
option('pkcs12', type: 'boolean', value: true, description: 'Enable PKCS#12')

# Compatibility options
option('openssl_extra', type: 'feature', value: 'auto', description: 'Enable OpenSSL extra compatibility')
option('openssl_all', type: 'feature', value: 'auto', description: 'Enable OpenSSL all compatibility')
option('openssl_no_stub', type: 'boolean', value: false, description: 'Disable OpenSSL stub functions')
option('old_names', type: 'boolean', value: true, description: 'Disable old API names')

# Meta switches
option('quic', type: 'boolean', value: false, description: 'Enable QUIC support (enables multiple features)')
option('curl', type: 'boolean', value: false, description: 'Enable curl compatibility (enables multiple features)')
